--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,9 @@
 p {
     overflow: hidden;
 }
+
+@layer components {
+    .btn-gradient {
+        @apply  rounded-full bg-gradient-to-r text-white from-purple-500 to-pink-500 max-w-xs px-2.5 py-1 z-50 md:filter-none cursor-pointer;
+    }
+}
